@@ -1,56 +1,0 @@
-#!/bin/sh
-
-# Darwin init file for smartd
-#
-# Home page of code is: http://www.smartmontools.org
-#
-# Copyright (C) 2004-8 Geoffrey Keating <geoffk@geoffk.org>
-#
-# This program is free software; you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by the Free
-# Software Foundation; either version 2, or (at your option) any later
-# version.
-#
-# You should have received a copy of the GNU General Public License (for
-# example COPYING); if not, write to the Free Software Foundation, Inc.,
-# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-
-# $Id$
-
-##
-# SMART monitoring
-##
-
-. /etc/rc.common
-
-StartService ()
-{
-    if [ "${SMARTd:=-YES-}" = "-YES-" ] &&
-       ! GetPID smartd > /dev/null; then
-
-        ConsoleMessage "Starting SMART disk monitoring"
-
-        /usr/sbin/smartd -p /var/run/smartd.pid
-    fi
-}
-
-StopService ()
-{
-    if pid=$(GetPID smartd); then
-        ConsoleMessage "Stopping SMART disk monitoring"
-        kill -TERM "${pid}"
-    else
-        echo "smartd is not running."
-    fi
-}
-
-RestartService ()
-{
-    if pid=$(GetPID smartd); then
-        kill -HUP "${pid}"
-    else
-        StartService
-    fi
-}
-
-RunService "$1"
